feat: Refactor: Use the Fabricate API for all operations #126
- integrates component editor and new UI

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1079,8 +1079,11 @@ END COMMON STRUCTURAL STYLES
     grid-template-columns: repeat(2, 1fr);
     column-gap: 1em;
     margin-bottom: 12px;
+    .fab-salvage-option-actual {
+      margin-bottom: 10px;
+    }
   }
-  .fab-no-salvage-opts {
+  .fab-no-salvage-opts, .fab-no-salvage-results, .fab-no-salvage-catalysts {
     display: flex;
     justify-content: center;
     align-items: center;
