feat: Refactor: Use the Fabricate API for all operations #126
- component salvage app catalyst rendering finished

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1216,7 +1216,7 @@ END COMMON STRUCTURAL STYLES
   .fab-component-salvage-app-body {
     height: 100%;
   }
-  .fab-salvage-hint {
+  .fab-salvage-hint, .fab-catalyst-hint {
     margin: 1em;
   }
 }
