--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1285,3 +1285,34 @@ END COMMON STRUCTURAL STYLES
     justify-self: flex-end;
   }
 }
+
+@font-face {
+  font-family: 'fabricate-regular';
+  src:  url("modules/fabricate/assets/fonts/fabricate-regular.eot?uhkbys");
+  src:  url("modules/fabricate/assets/fonts/fabricate-regular.eot?uhkbys#iefix") format("embedded-opentype"),
+  url("modules/fabricate/assets/fonts/fabricate-regular.ttf?uhkbys") format("truetype"),
+  url("modules/fabricate/assets/fonts/fabricate-regular.woff?uhkbys") format("woff"),
+  url("modules/fabricate/assets/fonts/fabricate-regular.svg?uhkbys#fabricate-regular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="fabricate-icon-"], [class*=" fabricate-icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: "fabricate-regular" !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.fabricate-icon-logo:before {
+  content: "\e900";
+}
