defect: Fixes issue with loading the icon font in the game UI

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1286,13 +1286,19 @@ END COMMON STRUCTURAL STYLES
   }
 }
 
+/*
+=====================================================================
+  BEGIN FABRICATE CUSTOM WEB FONT STYLES
+=====================================================================
+*/
+
 @font-face {
   font-family: 'fabricate-regular';
-  src:  url("modules/fabricate/assets/fonts/fabricate-regular.eot?uhkbys");
-  src:  url("modules/fabricate/assets/fonts/fabricate-regular.eot?uhkbys#iefix") format("embedded-opentype"),
-  url("modules/fabricate/assets/fonts/fabricate-regular.ttf?uhkbys") format("truetype"),
-  url("modules/fabricate/assets/fonts/fabricate-regular.woff?uhkbys") format("woff"),
-  url("modules/fabricate/assets/fonts/fabricate-regular.svg?uhkbys#fabricate-regular") format("svg");
+  src:  url("/assets/fonts/fabricate-regular.eot?uhkbys");
+  src:  url("/assets/fonts/fabricate-regular.eot?uhkbys#iefix") format("embedded-opentype"),
+  url("/assets/fonts/fabricate-regular.ttf?uhkbys") format("truetype"),
+  url("/assets/fonts/fabricate-regular.woff?uhkbys") format("woff"),
+  url("/assets/fonts/fabricate-regular.svg?uhkbys#fabricate-regular") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -1316,3 +1322,9 @@ END COMMON STRUCTURAL STYLES
 .fabricate-icon-logo:before {
   content: "\e900";
 }
+
+/*
+=====================================================================
+  END FABRICATE CUSTOM WEB FONT STYLES
+=====================================================================
+*/
