feat: Implements source actor selection

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1318,13 +1318,40 @@ END COMMON STRUCTURAL STYLES
 
 /*
 =====================================================================
+  BEGIN CSS RESET
+=====================================================================
+*/
+
+.fab-application-window {
+  @import (inline) "preflight-reset.css";
+
+  a {
+    &:hover {
+      text-shadow: none;
+    }
+  }
+}
+
+/*
+=====================================================================
+  END CSS RESET
+=====================================================================
+*/
+
+
+/*
+=====================================================================
   END FABRICATE CUSTOM WEB FONT STYLES
 =====================================================================
 */
 
+img.avatar-image {
+  border: none;
+}
+
 /*
 =====================================================================
-BEGIN TAILWIND DIRECTIVES
+  BEGIN TAILWIND DIRECTIVES
 =====================================================================
 */
 
@@ -1334,6 +1361,6 @@ BEGIN TAILWIND DIRECTIVES
 
 /*
 =====================================================================
-END TAILWIND DIRECTIVES
+  END TAILWIND DIRECTIVES
 =====================================================================
 */
