--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1322,7 +1322,7 @@ END COMMON STRUCTURAL STYLES
 =====================================================================
 */
 
-.fab-application-window {
+.fab-tw-application-container {
   @import (inline) "preflight-reset.css";
 
   a {
