Feat: Skeleton UI For Actor Crafting App (Patron pre-release feature) (#200)

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1318,13 +1318,41 @@ END COMMON STRUCTURAL STYLES
 
 /*
 =====================================================================
+  BEGIN CSS RESET
+=====================================================================
+*/
+
+.fab-tw-application-container {
+  @import (inline) "preflight-reset.css";
+
+  a {
+    &:hover {
+      text-shadow: none;
+    }
+  }
+}
+
+/*
+=====================================================================
+  END CSS RESET
+=====================================================================
+*/
+
+
+/*
+=====================================================================
   END FABRICATE CUSTOM WEB FONT STYLES
 =====================================================================
 */
 
+img.avatar-image {
+  border: none;
+  border-radius: 0;
+}
+
 /*
 =====================================================================
-BEGIN TAILWIND DIRECTIVES
+  BEGIN TAILWIND DIRECTIVES
 =====================================================================
 */
 
@@ -1334,6 +1362,6 @@ BEGIN TAILWIND DIRECTIVES
 
 /*
 =====================================================================
-END TAILWIND DIRECTIVES
+  END TAILWIND DIRECTIVES
 =====================================================================
 */
