feat: Search and view recipes
- Renames some types for clearer responsibilities
- Fixes a defect with `!important` tailwind styles

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1322,7 +1322,7 @@ END COMMON STRUCTURAL STYLES
 =====================================================================
 */
 
-.fab-tw-application-container {
+#fab-tw-application-container {
   @import (inline) "preflight-reset.css";
 
   a {
