--- a/src/public/templates/tailwind-application.html
+++ b/src/public/templates/tailwind-application.html
@@ -1,3 +1,3 @@
-<div class="fab-tw-application-container" data-theme="fabricate-skeleton-theme">
+<div id="fab-tw-application-container" data-theme="fabricate-skeleton-theme">
 
 </div>
