feat: Fix the positioning of the Actor crafting app button in the DND5E2 Actor sheet header buttons

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1288,6 +1288,24 @@ END COMMON STRUCTURAL STYLES
 
 /*
 =====================================================================
+  BEGIN DND5E STYLES
+=====================================================================
+*/
+
+.dnd5e2 {
+  .fab-actor-sheet-header-button {
+    padding: 4px 0 0 8px;
+  }
+}
+
+/*
+=====================================================================
+  END DND5E STYLES
+=====================================================================
+ */
+
+/*
+=====================================================================
   BEGIN FABRICATE CUSTOM WEB FONT STYLES
 =====================================================================
 */
