feat: Use header button class
- removes custom dnd5e2 positioning styles
- adds the header-button class to the actor sheet crafting button
- hides the button text in the 5e actor sheet header

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1287,19 +1287,21 @@ END COMMON STRUCTURAL STYLES
 
 /*
 =====================================================================
-  BEGIN DND5E STYLES
+  BEGIN DND5E2 THEME STYLES
 =====================================================================
 */
 
 .dnd5e2 {
   .fab-actor-sheet-header-button {
-    padding: 4px 0 0 8px;
+    .fab-button-text {
+      display: none;
+    }
   }
 }
 
 /*
 =====================================================================
-  END DND5E STYLES
+  END DND5E2 THEME STYLES
 =====================================================================
  */
 
