--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -259,7 +259,6 @@ BEGIN FABRICATE THEME STYLES
         i.fa-circle-exclamation {
           color: var(--color-error-bg);
           position: absolute;
-          top: 1px;
           font-size: var(--font-size-20);
           right: -9px;
           top: -9px;
@@ -1285,6 +1284,26 @@ END COMMON STRUCTURAL STYLES
     justify-self: flex-end;
   }
 }
+
+/*
+=====================================================================
+  BEGIN DND5E2 THEME STYLES
+=====================================================================
+*/
+
+.dnd5e2 {
+  .fab-actor-sheet-header-button {
+    .fab-button-text {
+      display: none;
+    }
+  }
+}
+
+/*
+=====================================================================
+  END DND5E2 THEME STYLES
+=====================================================================
+ */
 
 /*
 =====================================================================
