fix: Header button click error removed
- as Fabricate Actor sheet header buttons are not "real" Foundry sheet header buttons using the '.header-button' class to get the right styling results in an error caused by delayed click handler registration not finding the Fabricate button
- switch to using 5E specific styles to fix this. Grr.

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1293,6 +1293,7 @@ END COMMON STRUCTURAL STYLES
 
 .dnd5e2 {
   .fab-actor-sheet-header-button {
+    margin-top: 4px !important;
     .fab-button-text {
       display: none;
     }
@@ -1350,6 +1351,11 @@ END COMMON STRUCTURAL STYLES
 #fab-tw-application-container {
   @import (inline) "preflight-reset.css";
 
+  * {
+    scrollbar-color: initial;
+    scrollbar-width: initial;
+  }
+
   a {
     &:hover {
       text-shadow: none;
@@ -1379,7 +1385,7 @@ END COMMON STRUCTURAL STYLES
   }
 
   .scroll-track {
-    border-radius: 3px;
+    border-radius: 6px;
     box-shadow: 0 0 1px #999 inset;
   }
 
@@ -1390,16 +1396,23 @@ END COMMON STRUCTURAL STYLES
     &::-webkit-scrollbar-thumb {
       .scroll-thumb();
     }
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
   }
 
-  .scroll-primary::-webkit-scrollbar-thumb {
-    .scroll-thumb();
-    background: #ac9e6c;
+  .scroll-primary {
+    &::-webkit-scrollbar-thumb {
+      .scroll-thumb();
+      background: #ac9e6c;
+    }
   }
 
-  .scroll-secondary::-webkit-scrollbar-thumb {
-    .scroll-thumb();
-    background: #bc9276;
+  .scroll-secondary {
+    &::-webkit-scrollbar-thumb {
+      .scroll-thumb();
+      background: #bc9276;
+    }
   }
 
   img.avatar-image {
