--- a/src/public/templates/import-crafting-system.html
+++ b/src/public/templates/import-crafting-system.html
@@ -2,7 +2,7 @@
     <p class="notes">{{details}}</p>
     <div class="form-group">
         <label for="data">Source Data</label>
-        <input type="file" name="data" accept=".json">
+        <input type="file" name="data" id="data" accept=".json">
     </div>
     <div class="form-group">
         <label for="fileType">{{fileTypeLabel}}</label>
